k8s/adminer/01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:4.8.1
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
