k8s/adminer/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
  labels:
    app: adminer
spec:
  type: ClusterIP
  selector:
    app: adminer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
